--- a/index.html
+++ b/index.html
@@ -1,38 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>モンスト限定キャラクターAPI ドキュメント</title>
+    <link rel="stylesheet" href="syoukai.css">
+    <title>自己紹介</title>
 </head>
 <body>
+    <header>
+        <h1>私の自己紹介</h1>
+    </header>
 
-    <h1>モンスト限定キャラクターAPI ドキュメント</h1>
-
-    <h2>API詳細</h2>
-    <p>モンスターストライクのキャラクターについてのおすすめの育成方法や解説、評価などついて個人的にまとめたものをAPIにしました。データのGETが可能になっております。</p>
-    <p>モンスターストライクのキャラクターの詳細を入手したい人は、使ってみてください。</p>
-    <p>APIリンク: <a href="https://sheetdb.io/api/v1/50zl5ys1103gb">https://sheetdb.io/api/v1/50zl5ys1103gb</a></p>
-    <h2>データ定義</h2>
-    <ul>
-        <li><strong>name:</strong> キャラクターの名前</li>
-        <li><strong>attribute:</strong> 属性</li>
-        <li><strong>No:</strong> ナンバー</li>
-        <li><strong>type:</strong> タイプ</li>
-        <li><strong>SS1:</strong> SS１段階目</li>
-        <li><strong>SS2:</strong> SS２段階目</li>
-        <li><strong>Recommended-Fruits:</strong> おすすめのワクワクの実</li>
-        <li><strong>Explanation:</strong> 解説</li>
-        <li><strong>evaluation:</strong> 評価</li>
-        <li><strong>URL:</strong> モンストディクショナリーURL</li>
-    </ul>
-    <h2>API利用時の検索の仕方</h2>
-    <p>以下は検索の例です：</p>
-    <ul>
-        <li>モンスター名による検索：<br>
-            <code>https://sheetdb.io/api/v1/50zl5ys1103gb/search?name=キャラクター名</code></li>
-        <li>Noによる検索：<br>
-            <code>https://sheetdb.io/api/v1/50zl5ys1103gb/search?No=ナンバー</code></li>
-    <p>検索結果の画面</p>
-    <img src="gamen.png" width="700" height="350">
-    </ul>
+    <section>
+        <h2>基本情報</h2>
+        <p>名前：山口翔太</p>
+        <p>年齢：19歳</p>
+        <p>趣味：ゲーム(モンスト)</p>
+        <img src="game.png" width="200" height="150">
+    </section>
+</body>
+</html>
